--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/tabsDocAsistencias.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/tabsDocAsistencias.html.twig
@@ -80,7 +80,7 @@
          error: function(){
             //console.log("hay un error");
             modelessDocentesTabsNotas.close();
-            var mensajeErrorNotas   = "Lo sentimos. Se  presentó un error para cargar la consulta de las Notas."
+            var mensajeErrorNotas   = "Lo sentimos. Se  presentó un error para cargar la consulta de las Asistencias."
             $( "#"+idContenedor ).html(mensajeErrorNotas);
          },
          success: function(data) {
