--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoMaterias.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoMaterias.html.twig
@@ -20,8 +20,8 @@
          <td id="jornadaMateria_{{ materias.id_sa_materia_paralelo }}">{{ materias.jornada|upper }}</td>
          <td id="alumnosMateria_{{ materias.id_sa_materia_paralelo }}">{{ materias.cantidad }}</td>
          <td class="td-actions">
-            <a id="materiaAsistencias-{{ materias.id_sa_materia_paralelo }}" href="" class="tip asistenciaAlumnos btn btn-primary btn-circle"><span>Histórico de Asistencia de Alumnos</span><i class="fa fa-list"> </i></a>
-            <a id="materiasNotas-{{ materias.id_sa_materia_paralelo  }}" href="" class="tip notasAlumnos btn btn-primary btn-circle"><span>Consultas de Notas de los Alumnos</span><i class="fa fa-mortar-board"> </i></a>
+            <a id="materiaAsistencias-{{ materias.id_sa_materia_paralelo }}" href="" class="tip asistenciaAlumnos btn btn-primary btn-circle"><span>Asistencias de Alumnos</span><i class="fa fa-list"> </i></a>
+            <a id="materiasNotas-{{ materias.id_sa_materia_paralelo  }}" href="" class="tip notasAlumnos btn btn-primary btn-circle"><span> Notas de Alumnos</span><i class="fa fa-mortar-board"> </i></a>
             <a id="materiasVision-{{ materias.id_sa_materia_paralelo  }}" href="" class="tip materiasVision btn btn-primary btn-circle"><span>Vista General de la Asignatura</span><i class="fa fa-bar-chart-o"> </i></a></td>
          <input id="Nombre-Materia_{{materias.id_sa_materia_paralelo}}" value="{{ materias.materia|upper }}" type="hidden" >
          <input id="Nombre-Paralelo_{{materias.id_sa_materia_paralelo}}" value="{{ materias.paralelo|upper }}" type="hidden" >
