--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cmbDocentesHorarios.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cmbDocentesHorarios.html.twig
@@ -1,4 +1,4 @@
-<label class="control-label" >Docentes :</label>
+<label class="control-label" >Seleccione Docente :</label>
  <select class="form-control" id="Docentes">
      {%if Docente==""%}
          <option value="0">No existe Docente disponible</option> 
