--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoMaterias.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoMaterias.html.twig
@@ -8,7 +8,7 @@
          <th> Materia </th>
          <th> Paralelo</th>
          <th> Horario</th>
-         <th> Inscritos</th>
+         <th> Matriculados</th>
          <th class="td-actions">Opciones </th>
         </tr>
       </thead>
