--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
@@ -301,9 +301,10 @@
           },
           drop: function(date, allDay){
               var start = date.format("YYYY-MM-DD 00:00:00");
+              var end = date.format("YYYY-MM-DD 23:59:00");
               var id_evento = $(this).attr("name");
               // alert(id_evento);
-              insertar_eventos(start,id_evento);
+              insertar_eventos(start,id_evento,end);
 
                 // $('#calendar').fullCalendar('updateEvent',this);
 
@@ -367,9 +368,9 @@
 
     </script>
     <script type="text/javascript">
-        function insertar_eventos(date,id_evento){
+        function insertar_eventos(date,id_evento,end){
           // alert(date);
-            var end = date.format("YYYY-MM-DD 23:59:00");
+            
             $.post('{{path('admin_academico_insertar_eventos')}}', {start: date, end: end, id_evento: id_evento}, function(data) {
               if(data == 1){
                 mensaje_cisc( "notice", "EVENTO INSERTADO CON ÉXITO");
