--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/docentes_carrerashorarios.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/docentes_carrerashorarios.html.twig
@@ -28,8 +28,32 @@
                                             <table class="table table-striped table-bordered">
                                                 <tr>
                                                   <td>
-                                                      <a class="btn btn-success "id="pdfSolAnula" href="{{ path('docentes_pdf_horarioexamen',{ 'idDocente': idDocente,'idCarrera':facultad.Carrera,'ciclo':facultad.idCiclo,'carrera':facultad.Nombre }) }}" target="_blank">Imprimir Horario de Examen</a>
+                                                   
+
+                                                        <div class="col-lg-3 col-md-3" align="center">
+                                                                    <div class="panel panel-green">
+                                                                        <div class="panel-heading" align="center">
+                                                                            <div class="row">
+                                                                                <div class="col-xs-3">
+                                                                                    <i class="fa fa-file-pdf-o fa-5x"></i>
+                                                                                </div>
+                                                                                <div class="col-xs-6 text-right">
+                                                                                    <div><h3>Horarios de Exámenes</h3></div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <a href="{{ path('docentes_pdf_horarioexamen',{ 'idDocente': idDocente,'idCarrera':facultad.Carrera,'ciclo':facultad.idCiclo,'carrera':facultad.Nombre }) }}" target="_blank">
+                                                                            <div class="panel-footer">
+                                                                                <span class="pull-left">Exportar Horarios de Exámenes </span>
+                                                                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                                                                <div class="clearfix"></div>
+                                                                            </div>
+                                                                        </a>
+                                                                    </div>
+                                                            </div>
+
                                                   </td>
+
                                                 </tr>
                                             </table>
 
