--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cmbDocentesHorarios.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cmbDocentesHorarios.html.twig
@@ -1,5 +1,5 @@
 <label class="control-label" >Seleccione Docente :</label>
- <select class="form-control" id="Docentes">
+ <select class="form-control" id="Docente">
      {%if Docente==""%}
          <option value="0">No existe Docente disponible</option> 
     {%else%} 
