--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/consultahorarios.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/consultahorarios.html.twig
@@ -1,70 +1,83 @@
-{% extends 'TitulacionSisAcademicoBundle:Home:index.html.twig' %}
+{% extends 'TitulacionSisAcademicoBundle:Home:index.html.twig'%}
 
+      {% block home %}
 
-{% block contenido %}
-     <script type="text/javascript">
-  $(function () {
-           TableAdvanced.init();
-    });  
-</script>
-  <script src="{{ asset('js/EnviarMensajes.js') }}"></script>
-    <script src="{{ asset('js/ValidacionesNotificaciones.js') }}"></script>
-<script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
-   
-
-        
-      <section class="content">
-
-      <div class="page-content" style="height: 545px;">
-             
-            
-            <div class="col-md-12">
-              <div class="box-header with-border">
-                <h3 class="box-title">Horarios de clases</h3>
-               
-            </div><!-- /.box-header -->
-             <div class="box box-solid">
-                            <div class="panel-heading">    
-           <div class="box box-solid">
-			       
-				        <table class="table table-striped table-bordered table-hover" id="sample_1">
-				        <thead>
-				        <tr>
-					        <th> Codigo </th>	
-                                                <th> Docente </th>	
-					        <th> Descripcion   </th>					       
-                                                <th style="text-align: center">Descargar</th>
-				        </tr>
-				        </thead>
-				        <tbody>
-                   
-                           
-                                <tr>
-                                      <td>{{app.session.get('id_user')}}</td> 
-                                    <td>{{app.session.get('nom_usuario')}}</td> 
-                                    <td>Horario De clases</td>
-                                    <td style="text-align: center">  <a target="_blank" href="{{path('docentes_pdfhorarios')}}" id="Mensaje_1" name="Mensaje_1">
-                                    <i class="fa fa-download"></i>                                                           
-                                    </a></td>
-                                </tr>
-                           
-                             
-                            
-                                                              
-                    </tbody>
-				        </table>
-			        
-		      
-            </div>                 
-            </div>
-          </div>
-            </div>
-        
-          </div>
-        </section>
-
-   
+        {% if(bolcorrecto==1) %}
+        <div class="col-lg-12">
+          <div class="panel  panel-primary">
+            <!--<div class="panel-heading">
+              Collapsible Accordion Panel Group
+            </div>-->
+            <!-- .panel-heading -->
+            <div class="panel-body">
+                      <h2 align="center"><b>Horarios de Clases </b></h2>
+              <div class="panel-group" id="accordion">
                 
+                  
+                    
+                          {% for facultad in facultades %} 
+                              <div class="panel panel-default">
+                                  <div class="panel-heading">  
+                                      <h4 class="panel-title">
+                                          <a data-toggle="collapse" data-parent="#accordion" href="#{{ facultad.Carrera }}_{{ facultad.Facultad }}" class='tabscarrera' id="na_{{ facultad.Carrera }}_{{ facultad.Facultad }}_{{ facultad.idCiclo }}_f" >{{ facultad.Nombre }}</a>
+                                      </h4>
+                                  </div>
 
+                                  <div id="{{ facultad.Carrera }}_{{ facultad.Facultad }}" class="panel-collapse collapse">
+                                     <div class="table-responsive">
+                                            <table class="table table-striped table-bordered">
+                                                <tr>
+                                                  <td>
+                                                   
+
+                                                        <div class="col-lg-3 col-md-3" align="center">
+                                                                    <div class="panel panel-green">
+                                                                        <div class="panel-heading" align="center">
+                                                                            <div class="row">
+                                                                                <div class="col-xs-3">
+                                                                                    <i class="fa fa-file-pdf-o fa-5x"></i>
+                                                                                </div>
+                                                                                <div class="col-xs-6 text-right">
+                                                                                    <div><h3>Horarios de Clases</h3></div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <a href="{{path('docentes_pdfhorarios')}}" target="_blank">
+                                                                            <div class="panel-footer">
+                                                                                <span class="pull-left">Exportar Horarios de Clases </span>
+                                                                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                                                                <div class="clearfix"></div>
+                                                                            </div>
+                                                                        </a>
+                                                                    </div>
+                                                            </div>
+
+                                                  </td>
+
+                                                </tr>
+                                            </table>
+
+                                                  <!--/div-->
+                                          </div>
+                                      </div>
+                                   
+                              </div>
+                          {% endfor %}   
+                      </div>
+              </div>
+            </div>
+            <!-- .panel-body -->
+          </div>
+          <!-- /.panel -->
+        <!-- /.col-lg-9 -->
+        
+          <!-- /.col-lg-4 -->
+    {% endif %}
+ {% if(bolcorrecto==0) %}
+  <div class="panel panel-primary"> No se encontraron Registros de Carreras</div>
+{% endif %}
 {% endblock %}
+ 
+
+
 
