--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoAlumnosMateria.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoAlumnosMateria.html.twig
@@ -174,7 +174,12 @@
             {% else %}
                {% set hayAlumnos = 0 %}
                <div class="col-lg-12">
-                  Se presentaron problemas para mostrar el listado de alumnos.
+                  {% if dataMateria.estadoConsulta==2 %}
+                     No hay asistencias para mostrar.
+                  {% else %}
+                     Se presentaron problemas para mostrar el listado de alumnos.
+                  {% endif %}
+                  
                </div>
             {% endif %}
 				</div>
