--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoNotasMateria.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoNotasMateria.html.twig
@@ -24,6 +24,11 @@
 
 <div class="row">
    <div class="col-xs-12 container">
+      {% if estadoConsulta==2 %}
+         No existen estudiantes para mostrar.
+      {% elseif estadoConsulta==0 %}  
+         Se presentaron problemas para presentar las notas de los estudiantes
+      {% elseif estadoConsulta==1 %}
            <div class="panel panel-default">
            <div class="panel-heading ">
                LISTADO DE ALUMNOS - {{datosGenerales.materia|upper}} [{{datosGenerales.paralelo|upper}}]
@@ -112,6 +117,7 @@
                    <!-- /.panel-body -->
            </div>
            <!-- /.panel -->
+      {% endif %}
    </div>
 </div>
 <script type="text/javascript">
